Sat Feb 25 17:40:00 2006  Tim Janik  <timj@gtk.org>

	* docs/Makefile.am: generate HTML documentation.

	* docs/docu-template.doxi: template fixups.

	* docs/beast-index.doxi: links to HTML documentation.

	* web/Makefile: consolidated generation rules, make use of the files
	generated in ../docs/.

	* web/rdocu-template.doxi: removed.

	* docs/WRITING.3.texi:
	* docs/teximacros.texi:
	* docs/generated/*:
	* docs/generated/css/*:
	* docs/generated/cgi-bin/*:
	* docs/generated/css/images/*: removed remainings of old documentation system.

Sat Feb 25 15:18:04 2006  Tim Janik  <timj@gtk.org>

	* docs/docu-template.doxi: CVS copied from web/.

Thu Feb 23 23:16:25 2006  Tim Janik  <timj@gtk.org>

	* web/Makefile:
	provide DOXI_INCLUDE_FILE definition for files generated from the 
	docs/. directory. 

	* web/webframe.doxi:
	* web/webmenu.doxi:
	* web/Makefile: adapt to moving beastdefs.doxi. 

Tue Feb 21 01:31:42 2006  Tim Janik  <timj@gtk.org>

	* web/beastdefs.doxi: removed.

Tue Feb 21 01:29:38 2006  Tim Janik  <timj@gtk.org>

	* docs/beastdefs.doxi: CVS copied here from web/.

Tue Feb 21 01:26:43 2006  Tim Janik  <timj@gtk.org>

	* docs/Makefile.am: build HTML docs with doxer.

	* docs/release-notes.doxi: 
	* docs/beast-index.doxi: ported to doxer markup.

	* docs/*.doxi: include fixes.

	* web/Makefile: include fixes.

Sun Feb 19 01:26:19 2006  Tim Janik  <timj@gtk.org>

	* web/news.doxi: announce website move.

Sun Feb 19 00:20:15 2006  Tim Janik  <timj@gtk.org>

	* web/*.doxi: misc wording and link fixes.

	* web/htaccess.in: wiki redirection fixes, updated older redirects.

Sat Feb 18 19:41:00 2006  Tim Janik  <timj@gtk.org>

	* web/style/beast-style.css: IE and indentaiton fixes. added tree 
	expanders for web menus.

	* web/webmenu.doxi: added different CSS classes for submenus and expand
	vs. collapsed state. 

	* web/sound-browser.doxi: fixed up file type icon links.

	* web/web-images/back.png:
	* web/web-images/compressed.png: